--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,18 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_songs"
-        android:icon="@drawable/ic_music_note"
-        android:title="Songs"/>
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/home"
+        android:title="@string/home"/>
 
     <item
-        android:id="@+id/navigation_albums"
-        android:icon="@drawable/ic_album"
-        android:title="Albums"/>
+        android:id="@+id/navigation_stats"
+        android:icon="@drawable/stats"
+        android:title="@string/stats"/>
 
     <item
-        android:id="@+id/navigation_artists"
-        android:icon="@drawable/ic_person"
-        android:title="Artists"/>
+        android:id="@+id/navigation_goTrip"
+        android:icon="@drawable/trip"
+        android:title="@string/goTrip"/>
 
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/profile"
+        android:title="@string/profile"/>
 </menu>
